# mosc

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.MD  README.MD
doc/: .gitignore  config.toml  deploy.example
doc/assets/: _custom.scss  _variables.scss
doc/content/: _index.md
doc/content.bm/: _index.md
doc/content.bm/docs/: classes.md  concurency.md  control-flow.md  error-handling.md  function-call.md  get-started.md  method-calls.md  syntax.md  values.md  variables.md  wala.md  walan.md
doc/content.bm/docs/modules/: _index.md
doc/content.bm/docs/modules/core/: a.md  baa.md  diat.md  djuru.md  funan.md  gansan.md  seben.md  tienya.md  tii.md  tugun.md  wala.md  walan.md
doc/content.bm/docs/modules/fan/: fan.md
doc/content.bm/docs/modules/kunfe/: kunfe.md
doc/content.fr/: _index.md
doc/content/docs/: classes.md  concurency.md  control-flow.md  error-handling.md  functions.md  get-started.md  method-calls.md  module.md  syntax.md  try.md  values.md  variables.md  wala.md  walan.md
doc/content/docs/modules/core/: a.md  baa.md  diat.md  djuru.md  funan.md  gansan.md  kulu.md  seben.md  tienya.md  tii.md  tugun.md  wala.md  walan.md
doc/content/menu/: index.md
doc/i18n/: bm.yaml
doc/layouts/partials/docs/: footer.html  html-head.html  search.html
doc/static/: codejar-linenumbers.js  codejar.js  manifest.json  mosc-setup.js  mosc-try.js  mosc-try.wasm  mosc.css  mosc.js
doc/static/prism/: prism.js
helpers/: cify_mosc.py  test.py
src/api/: msc.h
src/builtin/: Core.c  Core.h  Primitive.c  Primitive.h
src/builtin/core/: core.msc  core.msc.inc
src/common/: codes.h  common.h  constants.h  opcodes.h
src/compiler/: Compiler.c  Compiler.h  Parser.c  Parser.h  Token.c  Token.h
src/helpers/: Helper.c  Helper.h
src/memory/: GC.c  GC.h  Value.c  Value.h
src/meta/: Fan.c  Fan.h  Fan.msc  Fan.msc.inc  Kunfe.c  Kunfe.h  Kunfe.msc  Kunfe.msc.inc
src/runtime/: MVM.c  MVM.h  debuger.c  debuger.h
test/: file.h  main.c  path.h  utils.c  utils.h
test/api/: api_tests.c  api_tests.h  benchmark.c  benchmark.h  call.c  call.h  call_calls_extern.c  call_calls_extern.h  call_calls_extern.msc
test/benchmark/: api_extern_method.msc  api_reentrancy.msc  api_reentrancy_error_handling.msc
test/core/: baa_test.msc  diat_test.msc
test/core/attributes/: class_attributes.msc
test/core/bool/: equality.msc  not.msc  toString.msc
test/core/djuru/: djuru_new.msc  djuru_throw_error.msc
test/core/list/: for_each.msc  sort.msc
test/core/number/: minus.msc  plus.msc  syntax.msc
test/core/string/: comparison.msc
test/examples/: Array.msc  api.msc  basic.msc  binops.msc  class.msc  class2.msc  destruction.msc  djuru.msc  error_handling.msc  extensions.msc  fibonacci.msc  file.msc  file2.msc  fun.msc  functional.msc  if-expression.msc  import.msc  lambda.msc  lib.msc  loop-expression.msc  loop.msc  map_loop.msc  math-sample.msc  network.msc  nullcheck.msc  nullish-check.msc  operators.msc  range.msc  reflection.msc  spread_rest.msc  test1.msc  when_sample.msc  when_sample2.msc
test/language/assignation/: associativity.msc  gansan.msc  global.msc  grouping.msc  infix_op.msc  is.msc  local.msc  prefix_op.msc  syntax.msc
test/language/break/: in_for_loop.msc  in_lopp.msc  nested_loop.msc  outside_loop.msc
test/language/class/: syntax.msc
test/language/closure/: closure_as_parameter.msc  closure_upvalue_closing.msc  closure_with_parameter.msc
test/language/djuru/: closure_upvalue_closing.msc
try/: CMakeLists.txt  build.sh  main.try.c
